--- a/src/app/pages/mypage/mypage.component.scss
+++ b/src/app/pages/mypage/mypage.component.scss
@@ -11,21 +11,31 @@
 #mypage{// .mat-tab-group{
   ::ng-deep.mat-tab-header{
       background-color: #ece9e7;
-      height: 55px;
+      height: 67px;
       border-bottom: none;
       .mat-tab-labels{
         justify-content: space-between;
         .mat-tab-label{
           height: 55px;
           padding: 0;
-          width: 33.3vw;
+          width: 25vw;
+          //margin-top: 8px;
           .mat-tab-label-content{
             font-size: 12px;
             padding: 6px 0;
-            width: 112px;
+            //width: 112px;
             background-color: #fff;
-            border-radius: 25px;
+            //border-radius: 10px;
             color: #bfa060;
+            //height: 52px;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            align-items: flex-end;
+            &::before{
+              position: absolute;
+              top: 6px;
+            }
           }
           &.mat-tab-label-active{
             .mat-tab-label-content{
@@ -36,34 +46,33 @@
 
           &:nth-of-type(1){
             .mat-tab-label-content::before{
-              content: url("../../../assets/img/icon_myplanlist.svg"); 
-              width: 14px;
-              height: 15px;
+              content: url("../../../assets/img/icon_myplan2.svg"); 
+              width: 31px;
+              height: 31px;
               margin-right: 6px;
-              
             }
           }
           &:nth-of-type(2){
             .mat-tab-label-content::before{
-              content: url("../../../assets/img/icon_myfavo.svg"); 
-              width: 14px;
-              height: 15px;
+              content: url("../../../assets/img/icon_myfav2.svg"); 
+              width: 314px;
+              height: 31px;
               margin-right: 6px;
             }
           }
           &:nth-of-type(3){
             .mat-tab-label-content::before{
-              content: url("../../../assets/img/icon_myplan.svg"); 
-              width: 14px;
-              height: 15px;
+              content: url("../../../assets/img/icon_myprof2.svg"); 
+              width: 31px;
+              height: 31px;
               margin-right: 6px;
             }
           }
           &:nth-of-type(4){
             .mat-tab-label-content::before{
-              content: url("../../../assets/img/icon_myprof.svg"); 
-              width: 14px;
-              height: 15px;
+              content: url("../../../assets/img/icon_myrev2.svg"); 
+              width: 31px;
+              height: 31px;
               margin-right: 6px;
             }
           }
