--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -289,7 +289,13 @@ div.plandtl {
     }
 
     .thumb {
-      height: 252px;
+      //height: 252px;
+      @media screen and (max-width:428px) {
+        height: 252px;
+      }
+      @media screen and (min-width: 429px) and (max-width: 1024px) {
+        height: 425px;
+      }
 
       >img {
         width: 100%;
@@ -777,6 +783,7 @@ div.plandtl {
     }
   }
 
+  /*
   @media screen and (min-width: 429px) {
     .box {
       .spotinfo {
@@ -786,9 +793,8 @@ div.plandtl {
 
             .thumbmain {
               height: 348px;
-
               img {
-                height: auto !important;
+                height: auto;
                 object-fit: cover;
                 @include copy-protect;
               }
@@ -798,6 +804,7 @@ div.plandtl {
       }
     }
   }
+  */
 
   // マップブロック
   .map {
@@ -979,9 +986,19 @@ div.plandtl {
           }
         }
 
+        $img_height:42vw;
+        $img_height_m:54vw;
+        $img_height_s:69vw;
+        
         .spot-image {
           position: relative;
-          height: 69vw;
+          height: $img_height;
+          @media screen and (max-width:428px) {
+            height: $img_height_s;
+          }
+          @media screen and (min-width: 429px) and (max-width: 1024px) {
+            height: $img_height_m;
+          }
           overflow: hidden;
           margin: 0.5em 16px 0;
 
@@ -1034,9 +1051,16 @@ div.plandtl {
             .thumbmain {
               text-align: center;
               background: $color-gry06;
+              height: $img_height;
+              @media screen and (max-width:428px) {
+                height: $img_height_s;
+              }
+              @media screen and (min-width: 429px) and (max-width: 1024px) {
+                height: $img_height_m;
+              }
 
               img {
-                height: 69vw;
+                height: 100%;
                 object-fit: cover;
                 @include copy-protect;
               }
@@ -1047,9 +1071,16 @@ div.plandtl {
           .thumbmain {
             text-align: center;
             background: $color-gry06;
+            height: $img_height;
+            @media screen and (max-width:428px) {
+              height: $img_height_s;
+            }
+            @media screen and (min-width: 429px) and (max-width: 1024px) {
+              height: $img_height_m;
+            }
 
             img {
-              height: 69vw;
+              height: 100%;
               object-fit: cover;
               @include copy-protect;
             }
