--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -49,7 +49,7 @@
           <router-outlet class="outletWidth"></router-outlet>
         </div>
       </div>
-      <app-footer></app-footer>
+      <app-footer id="pc-f"></app-footer>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </ng-template>
