--- a/src/app/pages/mypage-planlist/mypage-planlist.component.html
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.html
@@ -1,8 +1,16 @@
 <ng-container *ngIf="details$?.length>0; else noPlan">
   <!-- マイページプラン一覧 -->
-  <div class="box" infinite-scroll [infiniteScrollDistance]="5" [infiniteScrollUpDistance]="1.5"
-    [infiniteScrollThrottle]="100" [infiniteScrollContainer]="box" [scrollWindow]="isMobile?true:false"
-    [fromRoot]="isMobile?false:true" (scrolled)="onScrollDown()">
+  <div class="box" 
+    infinite-scroll 
+    [infiniteScrollDistance]="5" 
+    [infiniteScrollUpDistance]="1.5"
+    [infiniteScrollThrottle]="100" 
+    [infiniteScrollContainer]="isMobile?null:box" 
+    [scrollWindow]="isMobile?true:false"
+    [fromRoot]="isMobile?false:true" 
+    (scrolled)="onScrollDown()"
+    (scroll)="onScroll($event)"
+    #box>
     <ng-container *ngFor="let row of details$">
       <mat-card>
         <mat-card-content>
