--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -31,7 +31,7 @@
       </span>
 
       <div class='guide'>
-        どこに行く？
+        Remojuでできること
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
