--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,9 +13,9 @@
           (click)="linktoFavorite()">
           <img src="../../../assets/img/icon_fav.svg" alt="link to Favorite">
         </button> -->
-        <a routerLink="mypage" fragment="favorite" class="favorite">
+        <!-- <a routerLink="mypage" fragment="favorite" class="favorite">
           <img src="../../../assets/img/icon_fav.svg" alt="link to Favorite">
-        </a>
+        </a> -->
 
         <a routerLink="mypage" fragment="list" class="user">
           <img src="{{pictureUrl}}" alt="user">
@@ -31,7 +31,7 @@
       </span>
 
       <div class='guide'>
-        できること
+        {{"Hedtitle"|translate}}
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
