--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -63,13 +63,15 @@
 
         .switch-toggle {
           //background: #7D9E9F;
-          background-image: url('../../../../../assets/img/selecter_bg.svg');
+          //background-image: url('../../../../../assets/img/selecter_bg.svg');
           background-repeat: no-repeat;
           height: 34px;
           border-radius: $r;
           display: flex;
           justify-content: center;
           align-items: center;
+
+          $boder-width:2px;
 
           input {
             all: unset;
@@ -87,7 +89,7 @@
               height: 28px;
               width: 52px;
               border-radius: 14px;
-              margin-left: 1em;
+              margin-left: 0.3em;
 
               // &.google {
               //   border-left: 1px solid #fff;
@@ -98,6 +100,7 @@
               &:checked+label {
                 background: #679ecf;
                 //border-radius: 12px 0 0 12px;
+                border: $boder-width solid #386389;
               }
             }
 
@@ -105,6 +108,7 @@
               &:checked+label {
                 background: #fabd00;
                 //border-radius: 0 12px 12px 0;
+                border: $boder-width solid #ae8200;
               }
             }
 
@@ -113,14 +117,15 @@
                 //background:#797E86;
                 background: #de7274;
                 //border-radius: $r 0 0 $r;
+                border: $boder-width solid #7a3637;
               }
             }
 
             &#google {
               &:checked+label {
-                background: #aeaeae;
+                //background: #aeaeae;
                 //border-radius: 0 $r $r 0;
-                //border:1px solid #797E86; outline-offset: -1px;
+                border:$boder-width solid rgb(174, 174, 174);
               }
             }
           }
@@ -129,9 +134,16 @@
             text-align: center;
             width: 74px;
 
+            &.all{
+              background: #de7274;
+              border: $boder-width solid #fff;
+            }
+
             &.plan {
               //width: 58px;
               position: relative;
+              background: #fabd00;
+              border: $boder-width solid #fff;
 
               &::before {
                 content: "";
@@ -157,6 +169,8 @@
             &.spot {
               //width: 58px;
               position: relative;
+              background: #679ecf;
+              border: $boder-width solid #fff;
 
               &::before {
                 content: "";
@@ -180,7 +194,8 @@
             }
 
             &.google {
-
+              //background: #aeaeae;
+              border:$boder-width solid #eee;
               //width: 36px;
               &::before {
                 content: "";
