--- a/src/app/parts/transfer-panel/transfer-panel.component.scss
+++ b/src/app/parts/transfer-panel/transfer-panel.component.scss
@@ -160,13 +160,13 @@
 
 .blank {
   &::after {
-    content: "";
-    width: 16px;
-    height: 8px;
-    background: url("../../../assets/img/allow_down_fill.svg") no-repeat;
-    position: absolute;
-    margin: auto;
-    right: 0;
-    left: 0;
+    // content: "";
+    // width: 16px;
+    // height: 8px;
+    // background: url("../../../assets/img/allow_down_fill.svg") no-repeat;
+    // position: absolute;
+    // margin: auto;
+    // right: 0;
+    // left: 0;
   }
 }
