--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -19,13 +19,11 @@
             <div class="myplan-edit-box">
               <div class="lt">
                 <div class="container">
-                  <!-- <span class="label color-silver">{{ "PlanName" | translate }}<span *ngIf="!row?.planName" class="required">&nbsp;{{ "Required" | translate }}</span></span>
-                  <span class="text">{{ row?.planName }}</span> -->
                   <ng-container *ngIf="row">
                     <mat-form-field>
                       <mat-label>{{ 'PlanName' | translate }}</mat-label>
                       <input #inpName id="planName" name="planName" maxlength="36" required matInput
-                        placeholder="{{ 'PlanName' | translate }}" [(ngModel)]="row.planName">
+                        placeholder="{{'RequiredPlanName'|translate}}" [(ngModel)]="row.planName">
                       <button *ngIf="row.planName" matSuffix mat-icon-button aria-label="Clear"
                         (click)="row.planName=''">
                         <mat-icon>close</mat-icon>
@@ -351,49 +349,30 @@
   <!--*----------- プレビュー ----------*-->
   <div class="myplan-preview" *ngIf="!isEdit">
     <mat-card>
-      <mat-card-content>
-        <div class="preview-box">
-          <div class="lt">
-            <!-- プラン名 -->
-            <ng-container *ngIf="row.planName;else noplan">
-              <span class="planName">{{ row.planName }}</span>
-            </ng-container>
-            <ng-template #noplan>
-              <a href="javascript:void(0)" (click)="onClickEdit()">{{"RequiredPlanName"|translate}}
-              </a>
-            </ng-template>
-          </div>
-          <div class="rt">
-            <!-- 周遊時間 -->
-            <div class="myplan-time">
-              <span class="label">{{ "TimeRequired" | translate }}</span>
-              <span class="total">{{ row.timeRequiredDisp  }}</span>
-            </div>
-            <button mat-fab [ngClass]="{'isList':isMapDisp}" class="myplan-map" (click)="onClickMap()"
-              [disabled]="!row?.planSpots"></button>
-          </div>
+      <mat-card-header class="myplan-header">
+        <div class='name'>
+          <ng-container *ngIf="row.planName; else noplanName">
+            <span>
+              {{ row.planName }}
+            </span>
+          </ng-container>
+          <ng-template #noplanName>
+            <span class='noName'>
+              {{"PlanName"|translate}}
+            </span>
+          </ng-template>
         </div>
-      </mat-card-content>
+      </mat-card-header>
     </mat-card>
-    <!-- 旅行予定日 -->
-    <!-- 出発時間 -->
-    <!-- 終了時間 -->
-    <!-- <div class="set">
-      <div class="date">
-        <span>{{ row.travelDate | date:"yyyy/MM/dd (EEE)" }}</span>
-      </div>
-      <div class="time">
-        <span>{{"StartTime"|translate}}：{{ row.startTime }}</span>
-        <span>
-          <img src="../../../assets/img/line24.svg" alt=""/>
-        </span>
-        <span>{{"EndTime"|translate}}：{{ endTime }}</span>
-      </div>
-    </div> -->
     <div class='planhead'>
       <div *ngIf="row.picturePreviewUrl || row.pictureUrl || row.refPictureUrl" class="picpreview">
         <img width="100%" height="100%"
           [src]="row.imageCropped ?? row.picturePreviewUrl ?? row.pictureUrl ?? row.refPictureUrl" />
+        <div class='areaName'>
+          <span>
+            {{optionKeywords[0]}}
+          </span>
+        </div>
       </div>
       <mat-list class="planex">
         <mat-list-item>
@@ -421,116 +400,73 @@
 
     <app-transfer-panel *ngIf="row.startPlanSpot && row.startPlanSpot.transfer" [item]="row.startPlanSpot">
     </app-transfer-panel>
+
     <div class="box" *ngIf="row.planSpots">
       <ng-container *ngFor="let item of row.planSpots; index as i">
         <mat-card class="spotinfo">
           <!-- 掲載OK -->
-          <mat-card-content *ngIf="!item.isEndOfPublication">
-            <div class="spot-title">
-              <div class="lt">
-                <!--到着時間-->
-                <span class="mark">{{i+1}}</span>
-                <span class="starttime">{{ item.startTime }}</span>
-              </div>
-              <div class="rt">
-                <!--滞在時間-->
-                <div class="sugtime">
-                  <span class="caption">{{ "SuggestedTime" | translate }}</span>
-                  <span class="text">{{ item.stayTime }}{{ "Minute" | translate }}</span>
-                </div>
-              </div>
-            </div>
-            <div class="card-box">
-              <div class="card-header">
-                <!-- 写真(複数枚) -->
-                <owl-carousel-o *ngIf="item.previewPictures?.length > 1; else singlePict" [options]="mainOptions">
-                  <ng-container *ngFor="let pic of item.previewPictures; index as i">
-                    <ng-template carouselSlide id="item.spotId">
-                      <div class="thumbmain covered" (click)="linktoSpot(item)">
-                        <img [src]="pic" [alt]="item.spotId" [title]="item.spotId" />
-                      </div>
-                    </ng-template>
-                  </ng-container>
-                </owl-carousel-o>
-                <!-- 写真(1枚) -->
-                <ng-template #singlePict>
-                  <ng-container *ngFor="let pic of item.previewPictures; index as i">
-                    <div class="thumbmain" (click)="linktoSpot(item)">
-                      <img [src]="pic" [alt]="item.spotId" [title]="item.spotId" />
-                    </div>
-                  </ng-container>
-                </ng-template>
-                <div class="info">
+          <mat-card-content>
+            <ng-container *ngIf="!item.isEndOfPublication;">
+              <div class='card-box'>
+                <div class="spot-title">
                   <div class="lt">
-                    <span class="areaName" *ngIf="item.areaName">
-                      {{ item.areaName | langFilter: lang }}
-                    </span>
-                    <span class="category" *ngIf="item.categoryText && lang === 'ja'">
-                      {{ item.categoryText | langFilter: lang }}
-                    </span>
-                    <span class="category" *ngIf="item.categoryIcon && lang !== 'ja'">
-                      <img class="svg" [src]="'../../../assets/img/' + item.categoryIcon"
-                        matTooltip="{{ item.categoryText | langFilter: lang }}" />
-                    </span>
+                    <!--到着時間-->
+                    <span class="mark">{{i+1}}</span>
+                    <div class='titleline'>
+                      <div class="spotname">
+                        {{ item.spotName  }}
+                      </div>
+                      <div>
+                        <span class="starttime">{{ item.startTime ? item.startTime : "--:--" }}</span>
+                        <span class="sugtime">{{ "SuggestedTime" | translate }}
+                          {{ item.stayTime }}{{ "Minute" | translate }}</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="rt">
+                    <button mat-button class='link-to-spot' (click)="linktoSpot(item)"></button>
                   </div>
                 </div>
-                <div class="spotName" [innerHTML]="item.spotName">
-                </div>
-                <div class="views" *ngIf="item.pvAllQty">
-                  <span class="label">View</span>
-                  <span class="item">{{ item.pvAllQty.toLocaleString() }}</span>
-                </div>
-              </div>
 
-              <div class="card-bottom">
-                <mat-list class="pt0">
-                  <mat-list-item class="subheading">
-                    <ng-container *ngIf="item.memo">
-                      <p class="memo" [ngClass]="{'exps':!collapse}">{{ item.memo }}</p>
-                      <div class="close dw" *ngIf="collapse" (click)="isCollapse()">
-                        {{"Close"|translate}}
-                      </div>
-                      <div class="close up" *ngIf="!collapse" (click)="isCollapse()">
-                        {{"Open"|translate}}
+                <div class="spot-image">
+                  <!-- 写真(複数枚) -->
+                  <owl-carousel-o *ngIf="item.previewPictures?.length > 1; else singlePict" [options]="mainOptions">
+                    <ng-container *ngFor="let pic of item.previewPictures; index as i">
+                      <ng-template carouselSlide id="item.spotId">
+                        <div class="thumbmain covered" (click)="linktoSpot(item)">
+                          <img [src]="pic" [alt]="item.spotId" [title]="item.spotId" />
+                          <!-- <div class="memo" *ngIf="item.pictureMemos[i]">
+                        {{item.pictureMemos[i]}}
+                      </div> -->
+                        </div>
+                      </ng-template>
+                    </ng-container>
+                  </owl-carousel-o>
+                  <!-- 写真(1枚) -->
+                  <ng-template #singlePict>
+                    <ng-container *ngFor="let pic of item.previewPictures; index as i">
+                      <div class="thumbmain" (click)="linktoSpot(item)">
+                        <img [src]="pic" [alt]="item.spotId" [title]="item.spotId" />
                       </div>
                     </ng-container>
-                    <p *ngIf="!item.memo">{{ item.subheading }}</p>
-                  </mat-list-item>
-
-                  <mat-list-item class="row"
-                    *ngIf="item.spotAccess && (item.spotAccess.nearest | langFilter: lang) !== '';else empNearrest">
-                    <span class="directions">
-                      {{ item.spotAccess.nearest | langFilter: lang }}
-                    </span>
-                  </mat-list-item>
-                  <ng-template #empNearrest>
-                    <mat-list-item class="row">
-                      <span class="directions">{{"NearestSt"|translate}}&nbsp;ーーーー</span>
-                    </mat-list-item>
                   </ng-template>
-
-                  <mat-list-item class="row" *ngIf="item.businessHourHead;else empBusinessHour">
-                    <span class="businesshour">
-                      <span class="color">{{ "Businesshours" | translate }}</span>：{{ item.businessHourHead }}</span>
-                    <span class="regularholiday" *ngIf="item.holiday">
-                      &emsp;{{ "Holiday" | translate }}&nbsp;{{ item.holiday }}</span>
-                  </mat-list-item>
-                  <ng-template #empBusinessHour>
-                    <mat-list-item class="row">
-                      <span class="businesshour">
-                        <span class="color">{{ "Businesshours" | translate }}</span>&nbsp;ー:ー&nbsp;~&nbsp;ー:ー</span>
-                    </mat-list-item>
-                  </ng-template>
-                </mat-list>
+                </div>
               </div>
-            </div>
+            </ng-container>
 
             <mat-list>
-              <mat-list-item class="outtime" *ngIf="item.line">
-                <span class="sufix">{{ "StartTime" | translate }}</span>{{item.line[0].TimeFrom}}
+              <mat-list-item class="subheading" *ngIf="item.subheading">
+                <p>{{ item.subheading }}</p>
+                <mat-divider class="rj-linecolor"></mat-divider>
+              </mat-list-item>
+              <mat-list-item class="overview" *ngIf="item.overview">
+                <p>{{ item.overview }}</p>
+              </mat-list-item>
+              <mat-list-item class="memo" *ngIf="item.memo">
+                <p>{{ item.memo }}</p>
               </mat-list-item>
             </mat-list>
-
+            <!-- 移動方法 -->
             <app-transfer-panel [item]="item"></app-transfer-panel>
           </mat-card-content>
           <!-- 掲載終了スポットの場合 -->
@@ -563,7 +499,7 @@
       <span class="label">{{ "ArrivalPlace" | translate }}</span>
     </div>
     <!--終了時間-->
-    <mat-list>
+    <mat-list style="margin: auto 16px;">
       <mat-list-item class="endtime">
         <span class="sufix">{{ "EndTime" | translate  }}</span>{{ endTime }}
       </mat-list-item>
