--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -116,6 +116,12 @@
                 }
               }
             }
+
+            ::ng-deep {
+              .mat-form-field-label {
+                color: #f44336;
+              }
+            }
           }
         }
 
@@ -1038,21 +1044,64 @@
     border-top: #B19F7B 1px solid;
     border-bottom: #B19F7B 1px solid;
     font-family: Roboto, "Helvetica Neue", sans-self;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 16px;
 
-    .name {
+    .lt {
+      width: 100%;
       display: flex;
       align-items: center;
-      margin: auto 16px;
-
+      
       span {
         font-weight: 700;
       }
 
       .noName {
         font-size: 15px;
-        color: #00000054;
+        font-weight: normal;
+        color: #f44336;
       }
     }
+
+    .rt {
+      display: flex;
+      align-items: center;
+      button.link-to-spot {
+        box-shadow: none;
+        min-width: auto;
+        padding: 0;
+        width: 32px;
+        height: 32px;
+        line-height: initial;
+        margin-left: 6px;
+        &::before {
+          content: "";
+          display: inline-block;
+          width: 32px;
+          height: 32px;
+          background: url("../../../assets/img/map-icon.svg");
+          background-repeat: no-repeat;
+        }
+      }
+    }
+
+
+    // .name {
+    //   display: flex;
+    //   align-items: center;
+    //   margin: auto 16px;
+
+    //   span {
+    //     font-weight: 700;
+    //   }
+
+    //   .noName {
+    //     font-size: 15px;
+    //     font-weight: normal;
+    //     color: #f44336;
+    //   }
+    // }
   }
 
   .planhead {
